--- a/css/styles.scss
+++ b/css/styles.scss
@@ -38,7 +38,8 @@ html, body {
       letter-spacing: 1.7px;}
 
 .nav {
-  background: #696969; }
+  background: #696969;
+  padding: 30px 0; }
   .nav a, .nav label {
     text-transform: uppercase;
     font-size: 1.5em;
